# luminalshine

./: .gitignore  .gitmodules  .readthedocs.yaml  404.html  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  NOTICE  README.md  SECURITY.md  codecov.yml  feed.xml  index.html  robots.txt  sitemap.xml  staticman.yml  tailwind.config.js
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  issue-report.md
.github/workflows/: _codeql.yml  _jekyll-build.yml  _refresh-readthedocs.yml  ci-bundle.yml  ci-copr.yml  ci-flatpak.yml  ci-freebsd.yml  ci-homebrew.yml  ci-linux.yml  ci-windows.yml  ci.yml  coverage-web.yml  coverage-windows.yml  environment-specific-closure.yml  fixed-issue-follow-up.yml  localize.yml  logs-needed-closure.yml  logs-needed-reminder.yml  nightly-windows.yml  update-pages.yml
cmake/compile_definitions/: common.cmake  linux.cmake  macos.cmake  windows.cmake
cmake/dependencies/: Boost_Sunshine.cmake  ffmpeg.cmake  macos.cmake  webrtc.cmake  windows.cmake
cmake/packaging/: common.cmake  windows.cmake  windows_nsis.cmake  windows_wix.cmake
cmake/prep/: build_version.cmake  options.cmake
cmake/targets/: common.cmake  windows.cmake
docs/: Doxyfile-xml  api.md  architecture.md  building.md  changelog.md  concepts.md  conf.py  configuration.md  contributing.md  getting_started.md  index.md  introduction.md  quick_start.md  requirements.txt  system_requirements.md  wix7-migration.md
docs/_scripts/: build_changelog.py
docs/_static/: breadcrumbs.js  luminalshine.css
docs/api/: cpp.md
docs/linux/: AGENTS.md  LEARNINGS.md
gh-pages-template/: 404.html  _config.yml  clients.html  compare.html  contributing.html  index.html  license.html  security.html
gh-pages-template/assets/css/: site.css
gh-pages-template/assets/js/: docs-modal.js
packaging/windows/: LICENSE.rtf
packaging/windows/bootstrapper/: LuminalShineInstaller.cs  VibeshineInstaller.cs  app.manifest  build_bootstrapper.ps1
packaging/windows/wix/: ask_uninstall_legacy_sunshine.vbs  custom_actions.wxs  features.json  luminalshine.wxs  patch_custom_actions.wxs  remove_conflicting_products.vbs  repair_complete.vbs
plugins/playnite/SunshinePlaynite/: extension.yaml
scripts/: assert_msi_invariants.py  build_mingw_webrtc.ps1  diff_msi_tables.py  dump_msi_tables.ps1  gen_wix_files.py  lint_wix_conditions.py  linux_build.sh
src/: audio.cpp  audio.h  boost_process_shim.h  config.cpp  config.h  config_playnite.h  confighttp.cpp  confighttp_playnite.cpp  crypto.cpp  crypto.h  display_device.cpp  display_helper_builder.h  encoder_probe_shield.h  entry_handler.cpp  entry_handler.h  globals.h  http_auth.cpp  http_auth.h  httpcommon.cpp  httpcommon.h  input.cpp  integrity.cpp  integrity.h  logging.cpp  main.cpp  network.cpp  network.h  nvhttp.cpp  nvhttp.h  process.cpp  process.h  rtsp.cpp  rtsp.h  session_monitor_client.cpp  session_monitor_client.h  session_monitor_proxy.cpp  session_monitor_proxy.h  startup_display_wait.h  state_storage.cpp  state_storage.h  (+15 more)
src/amf/: amf_caps.cpp  amf_caps.h
src/cred_store/: cred_store.h  cred_store_file.cpp  cred_store_linux.cpp  cred_store_macos.cpp  cred_store_windows.cpp  file_backend.cpp  file_backend.h  integrity_key.cpp  integrity_key.h  tpm_seal_windows.cpp  tpm_seal_windows.h
src/nvenc/: nvenc_api.h  nvenc_base.cpp  nvenc_base.h  nvenc_config.h  nvenc_d3d11.cpp  nvenc_d3d11.h  nvenc_d3d11_native.cpp  nvenc_d3d11_on_cuda.cpp  nvenc_d3d11_on_cuda.h  nvenc_utils.cpp
src/platform/: common.h
src/platform/linux/: misc.cpp
src/platform/macos/: input.cpp  misc.mm
src/platform/windows/: audio.cpp  diag_info.cpp  diag_info.h  dir_acl.cpp  dir_acl.h  display.h  display_base.cpp  display_helper_integration.cpp  display_helper_request_helpers.cpp  display_ram.cpp  display_vgd.cpp  display_vram.cpp  display_vram.h  display_wgc.cpp  frame_limiter.cpp  frame_limiter.h  hotkey_manager.cpp  input.cpp  misc.cpp  misc.h  playnite_ipc.cpp  playnite_ipc.h  playnite_sync.cpp  render_stack_detect.cpp  render_stack_detect.h  rtss_integration.cpp  rtss_integration.h  service_constants.h  sudovda_recovery.h  virtual_display.cpp  virtual_display.h  virtual_display_backend.cpp  virtual_display_backend.h  virtual_display_mtt.cpp  virtual_display_mtt.h  virtual_display_vgd.cpp  virtual_display_vgd.h
src/platform/windows/ipc/: display_settings_client.cpp  display_settings_client.h  ipc_session.cpp  ipc_session.h  pipes.cpp  pipes.h
src/platform/windows/nvprefs/: driver_settings.cpp  driver_settings.h  nvprefs_interface.cpp
src/steam/: shortcuts_sync.cpp  shortcuts_sync.h  steam_paths.cpp  steam_paths.h  steam_sync.cpp  steam_sync.h  vdf_parser.cpp  vdf_parser.h
src_assets/common/assets/web/: App.vue  Checkbox.vue  ConfigFieldRenderer.vue  ConfigFieldShell.vue  Login.vue  PlatformLayout.vue  ResourceCard.vue  ThemeToggle.vue  Troubleshooting.vue  http.ts  index.html  naive-theme.ts  package-lock.json  package.json  router.ts  tailwind.config.js  template_header.html  theme.ts  tsconfig.base.json  vite.config.ts  vitest.config.ts
src_assets/windows/drivers/luminalvgd/: install.ps1
src_assets/windows/drivers/sudovda/: install.ps1
src_assets/windows/drivers/vdd/: install.ps1
src_assets/windows/misc/migration/: installer-migrations.ps1
tags/: index.html
tests/: CMakeLists.txt  test_encoder_probe_shield.cpp  test_playnite_autosync_reconcile.cpp  test_startup_display_wait.cpp
tests/fixtures/msi_golden/: README.md  msi_baseline.txt  wix3_baseline.txt
tests/frontend/: checkbox.test.ts  config-field-schema.test.ts  sunshine-version.test.ts
tests/unit/: test_audio.cpp  test_cert_chain.cpp  test_confighttp.cpp  test_credentials_persistence.cpp  test_http_auth.cpp  test_network.cpp  test_process.cpp  test_vdf_parser.cpp  test_version_compare.cpp  test_video.cpp
tools/: CMakeLists.txt  display_settings_helper.cpp  luminalshine_sessionmon.cpp  luminalshine_xbox_bt_helper.cpp  sunshine_wgc_capture.cpp  sunshinesvc.cpp
tools/playnite_launcher/: launcher.cpp  lossless_scaling.cpp  lossless_scaling.h
(+66 files in other folders)
